# shellai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo.tape  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/aishell/: __init__.py  agent.py  cli.py  config.py  media.py  personas.py  providers.py  retrieval.py
src/oshell/: __init__.py  agent.py  cli.py  config.py  history.py  media.py  personas.py  providers.py  retrieval.py  tools.py
src/shellai/: __init__.py  agent.py  cli.py  config.py  media.py  media_agent.py  personas.py  providers.py  retrieval.py  storyboard.py
tests/: conftest.py  test_agent.py  test_config.py  test_personas.py  test_providers.py  test_retrieval.py  test_storyboard.py  test_tools.py
tools/: make_demo.py
