[project]
name = "aishell-cli"
version = "0.1.0"
description = "A fast, beautiful terminal chat for any LLM — OpenAI or local Ollama. Zero config."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "djaferiurim" }]
keywords = ["llm", "ai", "cli", "chatgpt", "ollama", "openai", "terminal", "chat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "typer>=0.12",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/djaferiurim/aishell"
Issues = "https://github.com/djaferiurim/aishell/issues"

[project.scripts]
aishell = "aishell.cli:main_entry"
ai = "aishell.cli:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aishell"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
